--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,7 @@
     --primary-color: #000799;
     --text-color: #000137;
     --background-color: #E6E6F4;
-    --active-color: #C2C2ECFF;
+    --active-color: #c9c9f5;
     --hover-color: #aeaeef;
 }
 
@@ -159,4 +159,25 @@ body {
     font-size: 25px;
     font-weight: 400;
     align-items: center;
+}
+
+math-field {
+    background-color: white;
+    box-sizing: border-box;
+    color: var(--text-color);
+    cursor: pointer;
+    display: block;
+    font-family: -apple-system, system-ui, "Segoe UI", "Liberation Sans", sans-serif;
+    font-size: 25px;
+    font-weight: 400;
+    outline: none;
+    border: 2px;
+    border-color: var(--text-color);
+    padding: 20px 30px;
+    position: relative;
+    text-align: center;
+    white-space: nowrap;
+    margin-top: 35px;
+    border-radius: 8px;
+    text-decoration: none;
 }
