--- a/src/index.css
+++ b/src/index.css
@@ -92,6 +92,9 @@ body {
     width: 1000px;
     background-color: var(--active-color);
     border-radius: 8px;
+    font-family: -apple-system, system-ui, "Segoe UI", "Liberation Sans", sans-serif;
+    font-size: 25px;
+    font-weight: 400;
 }
 
 .margin-left {
@@ -174,7 +177,7 @@ math-field {
     margin-top: 35px;
     border-radius: 8px;
     text-decoration: none;
-    min-width: 150px;
+    min-width: 300px;
     min-height: 100px;
 }
 
