--- a/src/index.css
+++ b/src/index.css
@@ -127,6 +127,10 @@ body {
     margin-top: 50px;
 }
 
+.margin-bottom{
+  margin-bottom: 50px;
+}
+
 .div-horizontal {
     width: 1000px;
     display: flex;
