--- a/src/index.css
+++ b/src/index.css
@@ -180,27 +180,36 @@ body {
     align-items: center;
 }
 
-math-field {
-    background-color: white;
-    box-sizing: border-box;
-    color: var(--text-color);
-    cursor: pointer;
-    display: block;
-    font-family: -apple-system, system-ui, "Segoe UI", "Liberation Sans", sans-serif;
-    font-size: 25px;
-    font-weight: 400;
-    outline: none;
-    border: 2px;
-    border-color: var(--text-color);
-    padding: 20px 30px;
-    position: relative;
-    text-align: center;
-    white-space: nowrap;
-    margin-top: 35px;
-    border-radius: 8px;
-    text-decoration: none;
-    min-width: 300px;
-    min-height: 100px;
+/*.math-field {*/
+/*    background-color: white;*/
+/*    box-sizing: border-box;*/
+/*    color: var(--text-color);*/
+/*    cursor: pointer;*/
+/*    display: block;*/
+/*    font-family: -apple-system, system-ui, "Segoe UI", "Liberation Sans", sans-serif;*/
+/*    font-size: 25px;*/
+/*    font-weight: 400;*/
+/*    outline: none;*/
+/*    border: 2px;*/
+/*    border-color: var(--text-color);*/
+/*    padding: 20px 30px;*/
+/*    position: relative;*/
+/*    text-align: center;*/
+/*    white-space: nowrap;*/
+/*    margin-top: 35px;*/
+/*    border-radius: 8px;*/
+/*    text-decoration: none;*/
+/*    min-width: 300px;*/
+/*    min-height: 100px;*/
+/*}*/
+
+.math-field {
+    display: inline-block;
+    vertical-align: middle;
+    border-radius: 4px;
+    border: 1px solid rgba(0, 0, 0, .3);
+    padding-left: 5px; padding-right: 5px;
+    min-width: 100px;
 }
 
 .p {
