--- a/src/index.css
+++ b/src/index.css
@@ -204,7 +204,7 @@ body {
 /*}*/
 
 .math-field {
-    display: inline-block;
+    display: inline;
     vertical-align: middle;
     border-radius: 4px;
     border: 1px solid rgba(0, 0, 0, .3);
