--- a/src/index.css
+++ b/src/index.css
@@ -88,6 +88,12 @@ body {
     font-family: -apple-system, system-ui, "Segoe UI", "Liberation Sans", sans-serif;
     font-size: 25px;
     font-weight: 400;
+    justify-content: left;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-content: center;
+    text-align:left;
+    float:left;
 }
 
 .div-answer {
@@ -108,9 +114,9 @@ body {
     font-weight: 400;
     font-style: italic;
     background-color: Transparent;
-    background-repeat:no-repeat;
+    background-repeat: no-repeat;
     border: none;
-    padding:20px;
+    padding: 20px;
 
 }
 
@@ -127,8 +133,8 @@ body {
     margin-top: 50px;
 }
 
-.margin-bottom{
-  margin-bottom: 50px;
+.margin-bottom {
+    margin-bottom: 50px;
 }
 
 .div-horizontal {
@@ -204,12 +210,18 @@ body {
 /*}*/
 
 .math-field {
-    display: inline;
-    vertical-align: middle;
-    border-radius: 4px;
-    border: 1px solid rgba(0, 0, 0, .3);
-    padding-left: 5px; padding-right: 5px;
-    min-width: 100px;
+    flex-direction: row;
+    background: rgb(201, 201, 245);
+    flex-wrap: wrap;
+    align-content: center;
+    border : none;
+}
+
+.span {
+    flex-direction: row;
+    background: rgb(201, 201, 245);
+    flex-wrap: wrap;
+    align-content: center;
 }
 
 .p {
