--- a/src/index.css
+++ b/src/index.css
@@ -86,10 +86,10 @@ body {
     background: transparent;
     flex-wrap: wrap;
     align-content: center;
-    border : none;
+    border: none;
 }
 
-.div-problem  {
+.div-problem {
     height: 300px;
     width: 1000px;
     background-color: var(--active-color);
@@ -101,8 +101,8 @@ body {
     flex-direction: row;
     flex-wrap: wrap;
     align-content: center;
-    text-align:left;
-    float:left;
+    text-align: left;
+    float: left;
 }
 
 .div-answer {
@@ -151,6 +151,11 @@ body {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+}
+
+#problemSpace {
+    padding-left: 16px;
+    box-sizing: border-box;
 }
 
 .div-checkbox {
@@ -214,7 +219,7 @@ body {
 
 }
 
-.answer-button{
+.answer-button {
     visibility: hidden;
 
     background-color: var(--active-color);
@@ -235,5 +240,62 @@ body {
     width: 100px;
     border-radius: 8px;
     text-decoration: none;
-
 }
+
+#result {
+    font-size: 2.5rem;
+    font-weight: 700;
+}
+
+
+#raspuns {
+    margin-bottom: 16px;
+}
+
+#auth-container {
+    width: 100vw;
+    height: 100vh;
+    background: rgba(0, 0, 0, 0.5);
+    position: fixed;
+    top: 0;
+    left: 0;
+    display: none;
+    justify-content: center;
+    align-items: center;
+    z-index: 1;
+}
+
+#auth-body {
+    width: 50vw;
+    height: 50vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    gap: 16px;
+    background: white;
+    border-radius: 4px;
+    padding: 8px;
+}
+
+#auth-body input {
+    width: 80%;
+    border: none;
+    font-size: 1.5rem;
+}
+
+#btn-bar {
+    width: 100%;
+    display: flex;
+    padding-left: 16px;
+    padding-right: 16px;
+    justify-content: space-evenly;
+    align-content: center;
+}
+
+#auth-body button {
+    font-size: 1rem;
+    width: auto;
+    padding: 4px;
+}
+
